syntax = "proto3";
option go_package = "ChitChat/grpc/proto";

message BroadCast {
    enum Type {
        CHAT = 0;
        JOIN = 1;
        LEAVE = 2;
    }
    Type type = 1;
    string client_id = 2;
    string message = 3;
    int64 timestamp = 4; // Lamport Clock
}

message SubscribeRequest {
    string id = 1;
}

service ChitChat {
    // the specific client subscribes to receive all broadcast announcements from the server
    // the server sends back a stream of messages to the client
    rpc Subscribe (SubscribeRequest) returns (stream BroadCast) {};

    rpc Publish
}